--- a/GITHUB/Github.html
+++ b/GITHUB/Github.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="button-container" id="buttonContainer">
-        <a href="javascript/basis_html_prosjekt/index.html" class="link-button">JavaScript Basis HTML Prosjekt</a>
+        <a href="javascript/index.html" class="link-button">JavaScript Basis HTML Prosjekt</a>
     </div>
 
     <script>
