--- a/GITHUB/javascript/index.html
+++ b/GITHUB/javascript/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Enkelt prosjekt</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../../cssfil/alltmulig.css">
 </head>
 
 <body>
-
+ <a id="top" href="../Github.html"><button class="tilbake">← Tilbake</button></a>
   <h1 id="top">wellcome to my site</h1>
-  <button  class="particlebutton" onclick="makeParticles()">Make Particles</button>
-  <button  class="particlebutton" onclick="clearParticles()">Clear Particles</button>
+  <button  class="javascript-particlebutton" onclick="makeParticles()">Make Particles</button>
+  <button  class="javascript-particlebutton" onclick="clearParticles()">Clear Particles</button>
   <hr>
 
   
