--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <p>© 2025 Peter Tharaldsen Byrkje. All rights reserved.</p>
                         <p>Contact: <a href="mailto:peter@example.com">peterbyrkje@gmail.com</a></p>
                         <p><a href="https://steamcommunity.com/profiles/76561199402889746" target="_blank">Steam</a> |
-                                <a href="https://www.instagram.com/thorium_atom90" target="_blank">Inastagram</a>
+                                <a href="https://www.instagram.com/petert.byrkje/" target="_blank">Inastagram</a>
                         </p>
                 </div>
         </footer>
