fixing av memes
lagg til yrkesskade memen (fårtsatt massive trust)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <a href="https://elevweb.no/emil">
-                <img class="index-peter" src="bilte redrigos de potojop/flammebilete.jpg" width="300px" height="400px">
+                <img class="index-peter" src="bilte redrigos de potojop/flammebilete.jpg" width="300px" height="400px" alt="Bilete av Peter Tharaldsen Byrkje">
         </a>
 
         <p class="index-kos">Kos deg på sida mi</p>
