--- a/fritdisting/memes.html
+++ b/fritdisting/memes.html
@@ -4,91 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>MEMES</title>
-    <style>
-        /* Root background */
-        :root {
-            background-color: #000000;
-        }
-
-        body {
-            margin: 0;
-            padding: 20px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: inherit;
-            color: aqua;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        /* Back button */
-        .tilbake {
-            background-color: red;
-            color: aquamarine;
-            border: 2px solid blue;
-            border-radius: 8px;
-            width: 60px;
-            height: 35px;
-            font-weight: bold;
-            cursor: pointer;
-            opacity: 0.8;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            user-select: none;
-            align-self: flex-start;
-        }
-        .tilbake:hover {
-            background-color: darkred;
-            opacity: 1;
-            transform: scale(1.05);
-        }
-
-        /* Header */
-        h1 {
-            background-color: blueviolet;
-            border: 5px solid red;
-            border-radius: 10px;
-            padding: 10px 20px;
-            margin: 30px 0 20px 0;
-            width: fit-content;
-            text-decoration: underline;
-            box-shadow: 0 0 12px red;
-            user-select: none;
-        }
-
-        /* Paragraph */
-        p {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-            text-align: center;
-            max-width: 600px;
-        }
-
-        /* Video styling */
-        .mansborkin {
-            border: 7px solid red;
-            border-radius: 6px;
-            width: 100%;
-            max-width: 320px;
-            height: auto;
-            box-shadow: 0 0 20px red;
-            user-select: none;
-        }
-
-        /* Responsive scaling */
-        @media (max-width: 400px) {
-            h1 {
-                font-size: 1.4rem;
-                padding: 8px 12px;
-            }
-            p {
-                font-size: 1rem;
-                max-width: 90vw;
-            }
-            .mansborkin {
-                max-width: 90vw;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="../cssfil/alltmulig.css" />
+    <link rel="icon" sizes="32x32" href="../Favicon.ico" />
+    <link rel="icon" sizes="16x16" href="../Favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../Favicon.ico" />
 </head>
 
 <body>
@@ -96,12 +15,25 @@
 
     <h1>DETTE ER PRO MEMES SIDA</h1>
 
-    <p>Emil, Meg og Oskar i content warning</p>
+    <div class="memes-container">
+        <figure class="meme-frame">
+            <video class="memes-mansborkin" controls>
+                <source src="../bilte redrigos de potojop/emilsinmansborkinbag.mp4" type="video/mp4" />
+            </video>
+            <figcaption>
+                <h3>hermansborkin-bag</h3>
+                <p>meg Oskar og Emil på content warning</p>
+            </figcaption>
+        </figure>
 
-    <video class="mansborkin" controls>
-        <source src="../bilte redrigos de potojop/emilsinmansborkinbag.mp4" type="video/mp4" />
-        Din nettleser støtter ikke videoavspillingen.
-    </video>
+        <figure class="meme-frame">
+            <img src="../bilte redrigos de potojop/yrkesskade.png" alt="Yrkesskade Meme" class="memes-mansborkin" />
+            <figcaption>
+                <h3>Yrkesskade</h3>
+                <p>kankk armen i 2018 fekk Vedtakk for yrkesskade</p>
+            </figcaption>
+        </figure>
+    </div>
 </body>
 
 </html>
