små endringa + oppgåve i bok

--- a/Skuleting/oppgaave-hub.html
+++ b/Skuleting/oppgaave-hub.html
@@ -37,6 +37,7 @@
            <a href="../sitemap.xml" class="link-button">SITEMAP</a>
             <a href="Prøve13012026/index.html" class="link-button">13012026 prøve</a>
             <a href="../GITHUB/Github.html" class="link-button">GITHUB</a>
+            <a href="bokting/k252-60-64-69ps.html" class="link-button">side 52 60 64 og 69</a>
     </div>
 
     <script>
