--- a/fritdisting/memes.html
+++ b/fritdisting/memes.html
@@ -30,7 +30,7 @@
             <img src="../bilte redrigos de potojop/yrkesskade.png" alt="Yrkesskade Meme" class="memes-mansborkin" />
             <figcaption>
                 <h3>Yrkesskade</h3>
-                <p>kankk armen i 2018 fekk Vedtakk for yrkesskade</p>
+                <p>kankk armen i 2018 fekk Vedtak for yrkesskade</p>
             </figcaption>
         </figure>
     </div>
