--- a/GITHUB/javascript/index.html
+++ b/GITHUB/javascript/index.html
@@ -11,10 +11,10 @@
 <body>
  <a id="top" href="../Github.html"><button class="tilbake">← Tilbake</button></a>
   <h1 id="top">wellcome to my site</h1>
-  <button  class="javascript-particlebutton" onclick="makeParticles()">Make Particles</button>
+  <button  class="javascript-particlebutton" onclick="makeParticles(2)">Make Particles</button>
   <button  class="javascript-particlebutton" onclick="clearParticles()">Clear Particles</button>
   <hr>
-
+  <p>buttons are cooked chat. cant make em work</p>
   
   <script src="js/app.js"></script>
 </body>
