--- a/Skuleting/bokting/k252-60-64-69ps.html
+++ b/Skuleting/bokting/k252-60-64-69ps.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kode 2 book greie</title>
 </head>
+
 <style>
     .tilbake {
         transform: translate(6px, 10px);
@@ -40,6 +41,7 @@
 
     body {
         font-family: Arial, sans-serif;
+        overflow-x: hidden;
         margin: 20px;
         background: linear-gradient(to right, #8fc7f8, #20c138);
     }
@@ -78,7 +80,7 @@
         var fornavn = "Ola";
         var etternavn = "Nordmann";
         document.write("<br>" + "Fullt navn: " + fornavn + " " + etternavn);
-</script>
+    </script>
     <br>
     <script>
         // 52 4  promt boks that asks user for name and then displays "Wellcome (name)"//
@@ -106,9 +108,9 @@
         var omkrets = 2 * høyde + 2 * bredde;
         document.write("<br>" + "Arealet er: " + areal);
         document.write("<br>" + "Omkretsen er: " + omkrets);
-</script>
-<br>
-<script>
+    </script>
+    <br>
+    <script>
 
         // a) 1–6
         var terning = Math.floor(Math.random() * 6) + 1;
