--- a/GITHUB/javascript/index.html
+++ b/GITHUB/javascript/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 
 <head>
   <meta charset="UTF-8">
@@ -14,9 +14,8 @@
   <button  class="javascript-particlebutton" onclick="makeParticles(2)">Make Particles</button>
   <button  class="javascript-particlebutton" onclick="clearParticles()">Clear Particles</button>
   <hr>
-  <p>buttons are cooked chat. cant make em work</p>
-  
-  <script src="js/app.js"></script>
+  <p>buttons are cooked chat. cant make em work</p> 
+  <script src="js/app.js"> </script>
 </body>
 
 </html>
