--- a/GITHUB/Github.html
+++ b/GITHUB/Github.html
@@ -9,13 +9,15 @@
 <body>
 
     <div class="header">
-        <a href="../index.html"><button class="tilbake">← Tilbake</button></a>
+        <a href="../Skuleting/oppgaave-hub.html"><button class="tilbake">← Tilbake</button></a>
         <h1>ANOTHER HUB</h1><br>
         <input type="text" id="searchBox" placeholder="Søk etter oppgave, f.eks. 'kode1' eller 'tabel'...">
     </div>
 
     <div class="button-container" id="buttonContainer">
         <a href="javascript/index.html" class="link-button">JavaScript Basis HTML Prosjekt</a>
+        <a href="javascript/ifstatment.html" class="link-button">YF</a>
+        <a href="codenut.html" class="link-button">Codenut</a>
     </div>
 
     <script>
